# NOTE-PCL

./: .gitignore  Readme.md
01pcl_filters/: CMakeLists.txt
01pcl_filters/src/: 01pass_through.cpp  01pass_through_advanced.cpp  02voxelgrid.cpp  02voxelgrid_approximate.cpp  02voxelgrid_opt.cpp  03radius.cpp  04conditional.cpp  05model.cpp  06indices.cpp  06indices_advanced.cpp  07uniform_sample.cpp  08random_sample.cpp  09normal_space.cpp  10sampling_surface_normal.cpp  11crop_box.cpp
02pcl_registration/: CMakeLists.txt
02pcl_registration/src/: 01icp.cpp  01kd_icp.cpp  01plane_icp.cpp  02kd_gicp.cpp  03sac_ia.cpp  03sac_pj.cpp  04fpcs.cpp  04kfpcs.cpp  05basic_registration_pcl.cpp
PCD/: reg_target.pcd
pcl_util/: cout.h  func.hpp  viewer.h
